tests/snapshots/run_wpt_conformance__onnx_min_uint8_4D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "min.https.any.js",
    "min uint8 4D tensors",
    "onnx",
    "PASS",
)
