tests/snapshots/run_wpt_conformance__onnx_mul_float16_1D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "mul.https.any.js",
    "mul float16 1D tensors",
    "onnx",
    "PASS",
)
